Fix Brevo OTP, cleanup gitignore, remove node_modules

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -3,16 +3,23 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
+# Node
 node_modules
+client/node_modules
+server/node_modules
+
+# Build
 dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# Env
+.env
+server/.env
+
+# Editor files
 .vscode/*
 !.vscode/extensions.json
 .idea
