--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.11",
     "redis": "^5.10.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "slugify": "^1.6.6"
   }
 }
